refactor(backend): add swagger file generating, adapt controllers and dtos
